--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.62.11",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-router-dom": "^6.22.3",
     "sqlite3": "^5.1.6",
     "tailwind-merge": "^2.6.0",
     "yup": "^1.6.1"
@@ -26,6 +29,7 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
